# ae-latent-analysis

./: .gitignore  README.md  environment.yml  pyproject.toml
archive/: simple_example.py  unet_model.py
configs/: VLAE_spec.yaml  example.json  example_spec.yaml
experiments/: MLE_id_sweep.md
legacy_baseline_imports/: PARAMETER_GUIDE.md  README.md  train_utils.py
notebooks/: KNN_MLE.ipynb  MLE_analysis.ipynb  extract_latents.ipynb  visualize_recon.ipynb
src/ae_latent/analysis/latent/: extract.py  extract_latent.py  knn_MLE.py
src/ae_latent/analysis/standard/: plots.py  visualize_images.py
src/ae_latent/cli/: smoke.py  train.py  train_test.py
src/ae_latent/data/: builder.py  dataset_utils.py  loaders.py
src/ae_latent/models/: builders.py  vect_latent_ae.py
src/ae_latent/training/: train_ae.py
src/ae_latent/utils/: config.py  config_models.py  load_config.py
unet-optuna/: compare_results.py  dataset_utils.py  optuna_train.py  unet_model.py
unet_optuna/: QUICKSTART.md  dataset_utils.py  optuna_train.py  train_utils.py  unet_model.py
